# ory-sdk

clients/kratos/rust/: Cargo.toml  README.md
clients/kratos/rust/src/apis/: configuration.rs  courier_api.rs  frontend_api.rs  identity_api.rs  metadata_api.rs
clients/kratos/rust/src/models/: authenticator_assurance_level.rs  batch_patch_identities_response.rs  consistency_request_parameters.rs  continue_with.rs  continue_with_recovery_ui.rs  continue_with_recovery_ui_flow.rs  continue_with_set_ory_session_token.rs  continue_with_settings_ui.rs  continue_with_settings_ui_flow.rs  continue_with_verification_ui.rs  continue_with_verification_ui_flow.rs  courier_message_status.rs  courier_message_type.rs  create_identity_body.rs  create_recovery_code_for_identity_body.rs  create_recovery_link_for_identity_body.rs  delete_my_sessions_count.rs  error_authenticator_assurance_level_not_satisfied.rs  error_browser_location_change_required.rs  error_flow_replaced.rs  error_generic.rs  flow_error.rs  generic_error.rs  get_version_200_response.rs  health_not_ready_status.rs  health_status.rs  identity.rs  identity_credentials.rs  identity_credentials_code.rs  identity_credentials_oidc.rs  identity_credentials_oidc_provider.rs  identity_credentials_password.rs  identity_patch.rs  identity_patch_response.rs  identity_schema_container.rs  identity_with_credentials.rs  identity_with_credentials_oidc.rs  identity_with_credentials_oidc_config.rs  identity_with_credentials_oidc_config_provider.rs  identity_with_credentials_password.rs  (+77 more)
spec/kratos/: v1.2.0.json
(+661 files in other folders)
